# quotadeck-ai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md  SECURITY.md  package-lock.json  package.json  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/architecture/: overview.md
docs/architecture/adr/: 001-tauri-over-electron.md  002-react-over-svelte.md
docs/development/: coding-standards.md  setup.md
src/: App.tsx  main.tsx
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: accounts.rs  mod.rs  oauth.rs  platform.rs  settings.rs
src-tauri/src/models/: account.rs  mod.rs  quota.rs  settings.rs
src-tauri/src/services/: antigravity.rs  crypto.rs  database.rs  mod.rs  oauth.rs  oauth_server.rs  paths.rs
src/components/accounts/: AccountList.tsx  AddAccountModal.tsx
src/components/dashboard/: Dashboard.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/settings/: Settings.tsx
src/i18n/: config.ts
src/i18n/locales/en/: translation.json
src/i18n/locales/es/: translation.json
src/i18n/locales/pt/: translation.json
src/services/tauri/: accounts.ts  oauth.ts  platform.ts  settings.ts
src/stores/: accountStore.ts
src/styles/: animations.css  globals.css
src/types/: account.ts  quota.ts  settings.ts
src/utils/: cn.ts  constants.ts  formatters.ts
